--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Palindrome Birthday</title>
+    <title>Palindrome Birthday🥧</title>
 </head>
 <body>
     <h1>Palindrome Birthday Detector</h1>
+    <input type="date" id="bday-input">
+    <button id="show-btn">Show</button>
+    <p id="result"></p>
     
 </body>
 <script src="./index.js"></script>
