--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Palindrome Birthday🥧</title>
 </head>
 <body>
-    <h1>Palindrome Birthday Detector</h1>
-    <input type="date" id="bday-input">
-    <button id="show-btn">Show</button>
-    <p id="result"></p>
+    <h1>Palindrome Birthday Checker!!!</h1>
+    <input type="date" class="bday-input">
+    <button class="show-btn">Show</button>
+    <p id="output"></p>
     
 </body>
 <script src="./index.js"></script>
