--- a/index.html
+++ b/index.html
@@ -5,12 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Palindrome Birthday🥧</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="container">
     <h1>Palindrome Birthday Checker!!!</h1>
+    <br>
+    <label for="bday-input">Birth Date:</label>
     <input type="date" class="bday-input">
+    <br>
+    <br>
     <button class="show-btn">Show</button>
+    <br>
     <p id="output"></p>
+    </div>
     
 </body>
 <script src="./index.js"></script>
